--- a/src/2UTM_vs.vcxproj.filters
+++ b/src/2UTM_vs.vcxproj.filters
@@ -87,5 +87,14 @@
     <Image Include="2UTM.ico">
       <Filter>Файлы ресурсов</Filter>
     </Image>
+    <Image Include="runService.ico">
+      <Filter>Файлы ресурсов</Filter>
+    </Image>
+    <Image Include="stopService.ico">
+      <Filter>Файлы ресурсов</Filter>
+    </Image>
+    <Image Include="token.ico">
+      <Filter>Файлы ресурсов</Filter>
+    </Image>
   </ItemGroup>
 </Project>
